<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/pairing_request_title"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/pairing_request_message" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/pairing_refuse_button"
            android:textAllCaps="true" />

        <View
            android:layout_width="@dimen/separator_size"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/ok"
            android:textAllCaps="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_size"
        android:layout_above="@id/buttonsLayout"
        android:background="@android:color/black" />


</RelativeLayout>