<?xml version="1.0" encoding="utf-8"?>
<com.atinternet.tracker.ATRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/toolbar_width"
    android:layout_height="@dimen/toolbar_height"
    android:background="@drawable/toolbar_background"
    android:paddingLeft="@dimen/padding_toolbar"
    android:paddingStart="@dimen/padding_toolbar">

    <View
        android:id="@+id/recordButtonView"
        android:layout_width="@dimen/recorder_size"
        android:layout_height="@dimen/recorder_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/padding_toolbar"
        android:layout_marginRight="@dimen/padding_toolbar"
        android:background="@drawable/record_shape" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/recordButtonView"
        android:layout_toRightOf="@id/recordButtonView"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/connectionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnected"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/connectionTextView"
            android:text="@string/initial_time"
            android:textColor="@android:color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/cameraImageView"
        android:layout_width="@dimen/photo_width"
        android:layout_height="@dimen/photo_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/empty"
        android:paddingTop="@dimen/padding_toolbar"
        android:paddingBottom="@dimen/padding_toolbar"
        android:paddingLeft="@dimen/separator_margin"
        android:paddingStart="@dimen/separator_margin"
        android:paddingRight="@dimen/padding_toolbar"
        android:paddingEnd="@dimen/padding_toolbar"
        android:src="@drawable/flat_photo" />

    <View
        android:layout_width="@dimen/separator_size"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/padding_toolbar"
        android:layout_marginTop="@dimen/padding_toolbar"
        android:layout_toLeftOf="@id/cameraImageView"
        android:layout_toStartOf="@id/cameraImageView"
        android:background="@android:color/white" />
</com.atinternet.tracker.ATRelativeLayout>