<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/offlineViewer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="15dp">

        <ImageView
            android:id="@+id/backToEventViewer"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/empty"
            android:src="@drawable/back64" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/offline_hits"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/refreshOfflineHits"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="@string/empty"
                android:src="@drawable/refresh64" />

            <ImageView
                android:id="@+id/deleteOfflineHits"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:contentDescription="@string/empty"
                android:src="@drawable/trash64" />
        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/offlineHitsListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_background" />

    <RelativeLayout
        android:id="@+id/noOfflineHits"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_background"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/no_event_background"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/no_offline_hits"
            android:textColor="@android:color/white" />
    </RelativeLayout>
</LinearLayout>